# dnb-ride

./: .gitignore  AGENTS.md  LICENSE  README.md
server/: Cargo.toml  README.md
server/migrations/: 20250104101331_initial_schema.sql
server/src/: db.rs  main.rs  models.rs  routes.rs
ui/: README.md  next.config.ts  package-lock.json  package.json
ui/public/: manifest.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/admin/: layout.tsx  page.tsx
ui/src/components/: AddEventModal.tsx  AuroraBackground.tsx  EventCard.tsx  EventDetailPanel.tsx  Footer.tsx  Header.tsx  Map.tsx  MobileDrawer.tsx  Sidebar.tsx  SuggestVideoModal.tsx  index.ts
ui/src/components/admin/: AdminEventCard.tsx  EditEventModal.tsx  SuggestionCard.tsx  index.ts
ui/src/lib/: admin-api.ts  api.ts  mapbox-aurora-style.ts
ui/src/types/: index.ts
